[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/ingame/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/default.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/big_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/default_border.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ingame/StarNode.gd" type="Script" id=5]
[ext_resource path="res://assets/objects/Star.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/default_border_big.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/ingame/JumpsStats.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ingame/StarsStats.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/reload.png" type="Texture" id=10]
[ext_resource path="res://assets/home.png" type="Texture" id=11]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]
[ext_resource path="res://assets/placeholder.png" type="Texture" id=11]
[ext_resource path="res://objects/flag.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/jumpsRemaining.png" type="Texture" id=13]
[ext_resource path="res://assets/PointExplanation.png" type="Texture" id=14]
[ext_resource path="res://objects/Star.tscn" type="PackedScene" id=15]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BtnBack" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 6.0
margin_top = 7.0
margin_right = 518.0
margin_bottom = 519.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainBtn" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 69.0
margin_top = 9.0
margin_right = 581.0
margin_bottom = 521.0
rect_scale = Vector2( 0.1, 0.1 )
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 224.0
margin_top = 8.0
margin_right = 310.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Anleitung"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeSelection" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -41.5
margin_right = 119.0
margin_bottom = 41.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLinear" type="Button" parent="ModeSelection"]
margin_right = 103.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "Linear"

[node name="BtnQuad" type="Button" parent="ModeSelection"]
margin_top = 29.0
margin_right = 103.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Quadratisch"

[node name="BtnSin" type="Button" parent="ModeSelection"]
margin_top = 58.0
margin_right = 103.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 2 )
text = "Sinus"

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -49.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Linear" type="HBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -213.5
margin_top = -40.0
margin_right = 213.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Linear"]
margin_top = 10.0
margin_right = 30.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "f(x)="

[node name="A" type="LineEdit" parent="Control/Linear"]
margin_left = 34.0
margin_right = 124.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="Label2" type="Label" parent="Control/Linear"]
margin_left = 128.0
margin_top = 10.0
margin_right = 155.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "∙ x +"

[node name="B" type="LineEdit" parent="Control/Linear"]
margin_left = 159.0
margin_right = 249.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "0"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnJumpL" type="Button" parent="Control/Linear"]
margin_left = 253.0
margin_right = 365.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Sprung: Links"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnJumpR" type="Button" parent="Control/Linear"]
margin_left = 369.0
margin_right = 494.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Sprung: Rechts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quad" type="HBoxContainer" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -260.0
margin_top = -40.0
margin_right = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Quad"]
margin_top = 10.0
margin_right = 30.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "f(x)="

[node name="A" type="LineEdit" parent="Control/Quad"]
margin_left = 34.0
margin_right = 92.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/Quad"]
margin_left = 96.0
margin_top = 10.0
margin_right = 125.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "*(x +"

[node name="B" type="LineEdit" parent="Control/Quad"]
margin_left = 129.0
margin_right = 187.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "0"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control/Quad"]
margin_left = 191.0
margin_top = 10.0
margin_right = 213.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = ")² +"

[node name="C" type="LineEdit" parent="Control/Quad"]
margin_left = 217.0
margin_right = 275.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "0"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnJumpL" type="Button" parent="Control/Quad"]
margin_left = 279.0
margin_right = 391.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Sprung: Links"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnJumpR" type="Button" parent="Control/Quad"]
margin_left = 395.0
margin_right = 520.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Sprung: Rechts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sin" type="HBoxContainer" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -40.0
margin_right = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Sin"]
margin_top = 10.0
margin_right = 30.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "f(x)="

[node name="A" type="LineEdit" parent="Control/Sin"]
margin_left = 34.0
margin_right = 92.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/Sin"]
margin_left = 96.0
margin_top = 10.0
margin_right = 161.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "*sin(2*PI*"

[node name="B" type="LineEdit" parent="Control/Sin"]
margin_left = 165.0
margin_right = 223.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control/Sin"]
margin_left = 227.0
margin_top = 10.0
margin_right = 251.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "*x +"

[node name="C" type="LineEdit" parent="Control/Sin"]
margin_left = 255.0
margin_right = 313.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "0"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control/Sin"]
margin_left = 317.0
margin_top = 10.0
margin_right = 333.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = ") +"

[node name="D" type="LineEdit" parent="Control/Sin"]
margin_left = 337.0
margin_right = 395.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "2"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnJumpL" type="Button" parent="Control/Sin"]
margin_left = 399.0
margin_right = 511.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Sprung: Links"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnJumpR" type="Button" parent="Control/Sin"]
margin_left = 515.0
margin_right = 640.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Sprung: Rechts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongInputMsgLbl" type="Label" parent="Control"]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -162.0
margin_top = -14.0
margin_right = 24.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 2 )
text = "Fehlerhafte Eingabe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -115.0
margin_top = 8.0
margin_right = 16.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jumps" parent="Stats" instance=ExtResource( 8 )]
margin_right = 131.0

[node name="Stars" parent="Stats" instance=ExtResource( 9 )]
margin_right = 131.0

[node name="GameOverScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.0196078, 0.0196078, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.0
margin_top = -192.5
margin_right = 222.0
margin_bottom = -95.5
custom_fonts/font = ExtResource( 3 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.5
margin_top = -27.0
margin_right = 94.5
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainBtn" type="Button" parent="GameOverScreen/VBoxContainer"]
margin_right = 189.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "Erneut Versuchen"

[node name="BackToMenuBtn" type="Button" parent="GameOverScreen/VBoxContainer"]
margin_top = 29.0
margin_right = 189.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Zurück zum Hautmenü"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="FinishScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.364706, 0.364706, 0.364706, 0.380392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FinishScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.5
margin_top = -272.5
margin_right = 279.5
margin_bottom = -175.5
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Glückwunsch!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="FinishScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.5
margin_top = -88.5
margin_right = 279.5
margin_bottom = 8.5
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Du hast 3 / 3 Versuche gebraucht."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FinishScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.5
margin_top = -27.0
margin_right = 94.5
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Button" parent="FinishScreen/VBoxContainer"]
margin_right = 189.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "Nächstes Level"

[node name="TryAgainBtn" type="Button" parent="FinishScreen/VBoxContainer"]
margin_top = 29.0
margin_right = 189.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Erneut Spielen"

[node name="BackToMenuBtn" type="Button" parent="FinishScreen/VBoxContainer"]
margin_top = 58.0
margin_right = 189.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 2 )
text = "Zurück zum Hautmenü"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarNode2" type="Control" parent="FinishScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = -128.0
margin_right = 24.0
margin_bottom = -128.0
rect_pivot_offset = Vector2( -30, 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="FinishScreen/StarNode2"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="StarsCollected" type="Label" parent="FinishScreen/StarNode2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -18.0
margin_right = -39.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 7 )
text = "0 / 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -266.0
margin_top = 14.0
margin_right = 266.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 4 )
text = "Level NAME"
align = 1
[node name="HowToPlay" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -294, 187 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HowToPlay"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.368627, 0.368627, 0.368627, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HowToPlay"]
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = 416.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="HowToPlay/VBoxContainer"]
margin_right = 496.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
custom_fonts/font = ExtResource( 4 )
text = "Ziel des Spiels ist es die Fahne zu erreichen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flag" parent="HowToPlay/VBoxContainer" instance=ExtResource( 9 )]
position = Vector2( 162, 61 )
scale = Vector2( 1.5, 1.5 )

[node name="Label3" type="Label" parent="HowToPlay/VBoxContainer"]
margin_top = 134.0
margin_right = 496.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 4 )
text = "Gebe die gewünschte Funktion über die Textfelder ein.
Beispiel Eingaben:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HowToPlay/VBoxContainer"]
margin_top = 179.0
margin_right = 496.0
margin_bottom = 208.0

[node name="LineEdit" type="LineEdit" parent="HowToPlay/VBoxContainer/HBoxContainer"]
margin_right = 58.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "1"
editable = false

[node name="LineEdit2" type="LineEdit" parent="HowToPlay/VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "3/2"
editable = false

[node name="LineEdit3" type="LineEdit" parent="HowToPlay/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "3.14"
editable = false

[node name="Label4" type="Label" parent="HowToPlay/VBoxContainer"]
margin_top = 212.0
margin_right = 496.0
margin_bottom = 297.0
custom_fonts/font = ExtResource( 4 )
text = "
Wenn du auf einen der Sprung Buttons klickst, bewegt sich
der Magier zunächst zum Schnittpunkt der Funktion mit der
y-Achse und folgt dann deiner Funktion nach links oder rechts:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HowToPlay/VBoxContainer"]
margin_top = 301.0
margin_right = 496.0
margin_bottom = 451.0
rect_min_size = Vector2( 160, 150 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="Label5" type="Label" parent="HowToPlay/VBoxContainer"]
margin_top = 455.0
margin_right = 496.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 4 )
text = "Dir stehen nur eine begrenzte Anzahl an Sprüngen zur Verfügung.
Erreiche das Ziel, bevor dir die Sprünge ausgehen."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="HowToPlay/VBoxContainer"]
margin_top = 500.0
margin_right = 496.0
margin_bottom = 530.0
rect_min_size = Vector2( 200, 30 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="HowToPlay"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -452.0
margin_top = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="HowToPlay/VBoxContainer2"]
margin_right = 452.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 4 )
text = "Halte die rechte Maustaste gedrückt und ziehe um die 
Kamera zu bewegen. Mit dem Mausrad kannst du in das
Bild hinein oder heraus zoomen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="HowToPlay/VBoxContainer2"]
margin_top = 104.0
margin_right = 452.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 4 )
text = "Mit der linken Maustaste kannst du Punkte platzieren
und die genauen Koordinaten ablesen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="HowToPlay/VBoxContainer2"]
margin_top = 149.0
margin_right = 452.0
margin_bottom = 249.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Label9" type="Label" parent="HowToPlay/VBoxContainer2"]
margin_top = 253.0
margin_right = 452.0
margin_bottom = 294.0
custom_fonts/font = ExtResource( 4 )
text = "Wenn du eine Herausforderung suchst, kannst du die 
Sterne auf dem Weg zum Ziel einsammeln."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star" parent="HowToPlay/VBoxContainer2" instance=ExtResource( 12 )]
position = Vector2( 190, 339 )

[node name="Button" type="Button" parent="HowToPlay"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = -45.0
margin_right = -20.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 2 )
text = "Schließen"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]
[connection signal="pressed" from="TryAgainBtn" to="." method="_on_TryAgainBtn_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="ModeSelection/BtnLinear" to="." method="_on_BtnLinear_pressed"]
[connection signal="pressed" from="ModeSelection/BtnQuad" to="." method="_on_BtnQuad_pressed"]
[connection signal="pressed" from="ModeSelection/BtnSin" to="." method="_on_BtnSin_pressed"]
[connection signal="pressed" from="Control/Linear/BtnJumpL" to="." method="_on_BtnJumpL_pressed"]
[connection signal="pressed" from="Control/Linear/BtnJumpR" to="." method="_on_BtnJumpR_pressed"]
[connection signal="pressed" from="Control/Quad/BtnJumpL" to="." method="_on_BtnJumpL_pressed"]
[connection signal="pressed" from="Control/Quad/BtnJumpR" to="." method="_on_BtnJumpR_pressed"]
[connection signal="pressed" from="Control/Sin/BtnJumpL" to="." method="_on_BtnJumpL_pressed"]
[connection signal="pressed" from="Control/Sin/BtnJumpR" to="." method="_on_BtnJumpR_pressed"]
[connection signal="pressed" from="GameOverScreen/VBoxContainer/TryAgainBtn" to="." method="_on_TryAgainBtn_pressed"]
[connection signal="pressed" from="GameOverScreen/VBoxContainer/BackToMenuBtn" to="." method="_on_BtnBack_pressed"]
[connection signal="pressed" from="FinishScreen/VBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="FinishScreen/VBoxContainer/TryAgainBtn" to="." method="_on_TryAgainBtn_pressed"]
[connection signal="pressed" from="FinishScreen/VBoxContainer/BackToMenuBtn" to="." method="_on_BtnBack_pressed"]
[connection signal="pressed" from="HowToPlay/Button" to="." method="_on_close_tutorial_button_pressed"]
